--- a/week01/index.html
+++ b/week01/index.html
@@ -159,9 +159,9 @@
                 </li>
             </ul>
         </article>
-        <!-- Development Skills -->
+        <!-- Programing Skills -->
         <article>
-            <h2 class="heading">Development Skills</h2>
+            <h2 class="heading">Developer Skills</h2>
             <hr>
             <ul>
                 <li class="bullets">
