--- a/week01/index.html
+++ b/week01/index.html
@@ -204,7 +204,7 @@
         <!-- Experience -->
         <h2 class="heading">Experience</h2>
         <hr>
-        <h3>Graphic & Front-End Web Designer | <i>Ambrosia Group ApS, Denmark</i> | 2018 – 2019
+        <h3>Graphic & Front-End Web Designer | <i>Golden Starmedia AB</i> | 2019 – Present
         </h3>
         <ul>
             <li>
